# Full-Bloc-Chain

./: .gitignore  ARCHITECTURE_REVIEW.md  LICENSE  README.md  RESUME_BITCOIN_P2P.md  SUMMARY.md  TASKS_ITINE.md  TASKS_MBAYE.md  TASKS_MOUNIROU.md  generalisation.md
01-mini-blockchain/: Cargo.toml  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_IMPLEMENTATION.md
01-mini-blockchain/examples/: simple_blockchain.rs
01-mini-blockchain/src/: block.rs  blockchain.rs  lib.rs  main.rs  proof_of_work.rs
01-mini-blockchain/src/api/: handlers.rs  models.rs
01-mini-blockchain/src/network/: messages.rs
01-mini-blockchain/tests/: api_tests.rs  blockchain_tests.rs
