[package]
name = "mini-blockchain"
version = "0.1.0"
edition = "2021"
authors = ["Cheikh Mounirou Coly Diouf"]
license = "MIT"
description = "An educational mini-blockchain implementation in Rust"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Core dependencies
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

# API & Server
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
